Ad maiia-package to build jar

--- a/maiia-back-parent/pom.xml
+++ b/maiia-back-parent/pom.xml
@@ -49,6 +49,13 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.version}</version>
+                <executions>
+                    <execution>
+                        <configuration>
+                            <mainClass>com.maiia.test.Application</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
