module package to build jar with front and back

--- a/maiia-front-react/pom.xml
+++ b/maiia-front-react/pom.xml
@@ -11,51 +11,52 @@
     <properties>
         <npm.version>6.9.0</npm.version>
         <node.version>v10.16.3</node.version>
+        <frontend-src-dir>${project.basedir}</frontend-src-dir>
     </properties>
 
     <build>
-    <plugins>
-    <plugin>
-        <groupId>com.github.eirslett</groupId>
-        <artifactId>frontend-maven-plugin</artifactId>
-        <version>1.10.0</version>
+        <plugins>
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.10.0</version>
 
-        <configuration>
-            <nodeVersion>${node.version}</nodeVersion>
-            <workingDirectory>.</workingDirectory>
-            <installDirectory>${project.build.directory}</installDirectory>
-        </configuration>
-
-        <executions>
-            <execution>
-                <id>install-frontend-tools</id>
-                <goals>
-                    <goal>install-node-and-npm</goal>
-                </goals>
-            </execution>
-
-            <execution>
-                <id>npm-install</id>
-                <goals>
-                    <goal>npm</goal>
-                </goals>
                 <configuration>
-                    <arguments>install</arguments>
+                    <nodeVersion>${node.version}</nodeVersion>
+                    <npmVersion>${npm.version}</npmVersion>
+                    <workingDirectory>${frontend-src-dir}</workingDirectory>
+                    <installDirectory>${project.build.directory}</installDirectory>
                 </configuration>
-            </execution>
 
-            <execution>
-                <id>build-frontend</id>
-                <goals>
-                    <goal>npm</goal>
-                </goals>
-                <phase>prepare-package</phase>
-                <configuration>
-                    <arguments>build</arguments>
-                </configuration>
-            </execution>
-        </executions>
-    </plugin>
-    </plugins>
+                <executions>
+                    <execution>
+                        <id>install-frontend-tools</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                    </execution>
+
+                    <execution>
+                        <id>npm-install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>install</arguments>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>npm run build</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
