--- a/maiia-back-parent/pom.xml
+++ b/maiia-back-parent/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>maiia-back-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <packaging>jar</packaging>
+
     <properties>
         <java.version>1.8</java.version>
         <spring.version>2.3.2.RELEASE</spring.version>
