--- a/maiia-package/pom.xml
+++ b/maiia-package/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>maiia-package</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+    <frontend-src-dir>${project.basedir}</frontend-src-dir>
+</properties>
+
     <dependencies>
         <dependency>
             <groupId>com.maiia.test</groupId>
@@ -40,15 +44,41 @@
                 </executions>
             </plugin>
             <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>position-react-build</id>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <phase>prepare-package</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}/static</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/../maiia-front-react/build</directory>
+                                    <filtering>false</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.3.2.RELEASE</version>
-                <goals>
-                    <goal>repackage</goal>
-                </goals>
-                <configuration>
-                    <mainClass>com.maiia.test.Application</mainClass>
-                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.maiia.test.Application</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
